feat: delete own post

--- a/src/index.css
+++ b/src/index.css
@@ -44,3 +44,6 @@ table {
 * {
   box-sizing: border-box;
 }
+.css-ma2vix-MuiTypography-root-MuiLink-root{
+    font-family: "Roboto","Helvetica","Arial",sans-serif;
+}
